--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,6 @@
     <string name="app_name">Game of Words</string>
     <string name="action_settings">Settings</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
-
     <!-- Error strings -->
     <string name="not_connected">GoogleApiClient not yet connected. Try again.</string>
     <string name="geofence_not_available">Geofence service is not available now</string>
@@ -24,7 +20,7 @@
     <string name="geofence_transition_entered">Entered</string>
     <string name="geofence_transition_exited">Exited</string>
     <string name="unknown_geofence_transition">Unknown Transition</string>
-    <string name="geofence_transition_notification_text">...</string>
+    <string name="notification_text">Touch to begin</string>
 
     <!-- UI strings -->
     <string name="welcome">Welcome to Game of Words!</string>
