Resolved issues related to Android M. Renamed app.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Game of Words</string>
+    <string name="app_name">GeoOulu</string>
     <string name="action_settings">Settings</string>
 
     <!-- Error strings -->
@@ -23,7 +23,7 @@
     <string name="notification_text">Touch to begin</string>
 
     <!-- UI strings -->
-    <string name="welcome">Welcome to Game of Words!</string>
+    <string name="welcome">Welcome to GeoOulu!</string>
     <string name="chooseNickname">Please choose a nickname.</string>
     <string name="highscoresTitle">Highscores</string>
     <string name="inputRelevantWordInstructions">Before you begin, please enter a word that you believe characterises well the space you are currently in:</string>
